syntax = "proto3";
package org.jamt1;

message MotorType {
  string object_id = 1;
  string object_type = 2; 
  
  message measurement {
    int64 _time = 1;
    string _path = 2;

    double GearRatio = 3;
    double Pitch = 4;
  }
}